--- a/TuneHub/src/app/Components/Shared/navbar/navbar.component.html
+++ b/TuneHub/src/app/Components/Shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 
 
 <mat-toolbar color="primary" class="tunehub-header">
@@ -30,4 +30,4 @@
     Get Started
   </button>
 
-</mat-toolbar>
+</mat-toolbar> -->
