--- a/TuneHub/src/app/app.component.html
+++ b/TuneHub/src/app/app.component.html
@@ -1,2 +1,13 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="main-layout">
+    <app-sidebar></app-sidebar> 
+
+    <div class="content-wrapper">
+        <app-navbar></app-navbar>
+        <main>
+            <router-outlet></router-outlet>
+        </main>
+    </div>
+</div>
+
+<app-footer></app-footer>
+
