--- a/TuneHub/src/app/Components/Shared/sidebar/sidebar.component.html
+++ b/TuneHub/src/app/Components/Shared/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
-<!-- Overlay
+<!-- Overlay -->
 <div class="overlay" [class.active]="isMenuOpen" (click)="closeMenu()"></div>
 
 
 <img src="../assets/icons/menu.png" class="menu-icon" (click)="openMenu()">
 
 
-<!-- <nav class="side-menu" [class.open]="isMenuOpen">
+<nav class="side-menu" [class.open]="isMenuOpen">
   <button class="close-menu" (click)="closeMenu()">
     <img src="../assets/icons/X.png" alt="Close">
   </button>
@@ -23,4 +23,4 @@
     <img class="iconM" src="../assets/icons/F.png">
     <img class="iconM" src="../assets/icons/T.png">
   </div>
-</nav> --> 
+</nav>  
