--- a/TuneHub/src/styles.css
+++ b/TuneHub/src/styles.css
@@ -7,3 +7,101 @@ body {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  /* overflow: hidden; */
+  background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 40%, #2b2b2b 100%);
+  background: #1D2838;
+  font-family: 'Inter', 'Roboto', 'Open Sans', sans-serif;
+  color: white;
+}
+
+/* body{
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+}  */
+
+.button {
+  display: inline-flex;           /* שימוש ב-Flexbox */
+  align-items: center;            /* מרכזים אנכית */
+  justify-content: center;        /* מרכזים אופקית */
+  gap: 8px;                       /* מרווח בין האייקון לטקסט */
+  
+  background: linear-gradient(90deg, #A03FFB 0%, #5271FF 100%);
+  border-radius: 10px;
+  padding: 12px 18px;
+  cursor: pointer;
+  font-family: 'Inter', 'Roboto', 'Open Sans', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  color: white;                   /* צבע הטקסט */
+  border: none;                   /* להסיר גבול אם קיים */
+}
+
+.button mat-icon {
+  font-size: 25px;                /* אפשר להתאים את גודל האייקון */
+}
+
+.button {
+  transition: transform 0.15s ease, box-shadow 0.15s ease;
+}
+
+
+.button:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+}
+
+.button::after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.2); /* השכבה הכהה */
+  opacity: 0;                  /* מתחיל שקוף */
+  transition: opacity 0.2s ease;
+  border-radius: inherit;
+  pointer-events: none;        /* לא חוסם לחיצות */
+}
+
+.button:active::after {
+  opacity: 1;                  /* מופיע בזמן לחיצה */
+}
+
+.button:active {
+  transform: scale(0.95);      /* הקטנה בזמן לחיצה */
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
+
+.play {
+  color: #B97FFF; /* סגול */
+}
+
+.share {
+  color: #3BB2FF; /* כחול */
+  margin: 0 10px;
+}
+
+.grow {
+  color: #3CFF6E; /* ירוק */
+}
+
+/* --- Dark Overlay --- */
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.8);
+  z-index: 2;
+}
