--- a/TuneHub/src/app/Components/Shared/header/header.component.css
+++ b/TuneHub/src/app/Components/Shared/header/header.component.css
@@ -282,7 +282,7 @@ header::after {
 }
 
 header {
-  z-index: 200000000;
+  z-index: 20000000000;
 }
 
 
@@ -300,11 +300,37 @@ header {
   /* margin-top: 16px; */
   border-radius: 0 0 45px 45px;
   
+  
+  /* background: rgba(0,0,0,0.55);   חצי שקוף */
+    background-color: rgba(29, 42, 59, 0.55); /* חצי שקוף */
+  -webkit-backdrop-filter: blur(12px);
 
-  background: rgba(0, 0, 0, 0.55);              /* שחור חצי שקוף */
-  backdrop-filter: blur(12px);                  /* טשטוש רקע */
-  -webkit-backdrop-filter: blur(12px);          /* תמיכה ב-Safari */
+  backdrop-filter: blur(12px);
   
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.1);   /* קו לבן דק ושקוף */
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
