--- a/TuneHub/src/app/Components/Shared/home-page/home-page.component.html
+++ b/TuneHub/src/app/Components/Shared/home-page/home-page.component.html
@@ -1,9 +1,8 @@
 <div class="image-slider">
-    <img src="assets/images/1.jpg">
-    <img src="assets/images/2.jpg">
-    <img src="assets/images/3.jpg">
-    <img src="assets/images/4.jpg">
-
+    <img src="assets/images/1.jpg" alt="background-1">
+    <img src="assets/images/2.jpg" alt="background-2">
+    <img src="assets/images/3.jpg" alt="background-3">
+    <img src="assets/images/4.jpg" alt="background-4">
 
     <div class="overlay"></div>
 </div>
