--- a/TuneHub/src/app/Components/Shared/header/header.component.html
+++ b/TuneHub/src/app/Components/Shared/header/header.component.html
@@ -1,11 +1,11 @@
 <header>
   <!-- לוגו + תפריט -->
   <div class="logo" (click)="goToHomePage()">
-    <mat-icon (click)="toggleSidebar()">menu</mat-icon>
+    <mat-icon  (click)="openSidebar()">>menu</mat-icon>
 
     <img src="assets/images/logo.jpg" alt="Logo" />
     <div id="logo-name">
-      <p id="app-name" style="font-size: 30px;font-weight: 700;">TuneHub</p>
+      <p id="app-name">TuneHub</p>
       <div class="app-slogan">
         <span class="play">Play.</span>
         <span class="share">Share.</span>
