--- a/TuneHub/src/app/Components/Users/login-window/login-window.component.html
+++ b/TuneHub/src/app/Components/Users/login-window/login-window.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="overlay"></div>
 
 <div class="card">
@@ -6,7 +8,7 @@
   <p class="subtitle">Play. Share. Grow.</p>
   <p class="text">Join thousands of musicians worldwide</p>
 
-  <button class="btn login">🚀 Log In</button>
+  <button class="btn login" onclick()>🚀 Log In</button>
   <button class="btn signup">✨ Sign Up Free</button>
 
   <p class="guest">Continue as Guest</p>
@@ -16,3 +18,8 @@
   </p>
 </div>
 <p>login-window works!</p>
+
+<br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br>
+
+
