--- a/TuneHub/src/app/Components/Shared/header/header.component.css
+++ b/TuneHub/src/app/Components/Shared/header/header.component.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 100;
+    z-index: 100;
   /* גבוה מאוד */
   /* background: rgba(255,255,255,0.3); שקוף */
 }
@@ -85,17 +85,7 @@ body {
   font-weight: 500;
 }
 
-/* סטייל לאייקון קטן בצד שמאל אם תרצה */
-/* .kbd-hint {
-  font-size: 12px;
-  color: #64748b;
-  background: rgba(15, 23, 36, 0.03);
-  padding: 6px 8px;
-  border-radius: 8px;
-  flex: 0 0 auto;
-} */
 
-/* אפשרות ל-hover קלה */
 .search-container:hover {
   box-shadow: 0 6px 18px rgba(15, 23, 36, 0.04);
 }
@@ -200,18 +190,18 @@ header::after {
 }
 
 /* Sidebar */
-.sidebar {
+/* .sidebar {
   width: 260px;
   height: 100vh;
   background: linear-gradient(180deg, #121212 0%, #1c1c1c 100%);
   position: fixed;
   top: 0;
-  left: -300px;
+  left: -300px; */
   /* מוסתר בהתחלה בצד שמאל */
-  transition: left 0.3s ease;
+  /* transition: left 0.3s ease;
   padding: 60px 20px 20px;
   z-index: 999;
-}
+} */
 
 .sidebar.open {
   left: 0;
@@ -281,10 +271,6 @@ header::after {
   /* צבע כהה יותר אבל לא שחור */
 }
 
-header {
-  z-index: 20000000000;
-}
-
 
 
 
@@ -295,7 +281,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 1000;
+ 
   /* margin: 15px 15px; */
   /* margin-top: 16px; */
   border-radius: 0 0 45px 45px;
