--- a/TuneHub/src/app/app.component.html
+++ b/TuneHub/src/app/app.component.html
@@ -1,6 +1,23 @@
 <app-header></app-header>
-<app-sidebar></app-sidebar>
 
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<!-- Material Sidenav Container -->
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav
+    #sidenav
+    mode="over"
+    [opened]="sidebarService.isOpen()"
+    class="w-72 bg-gray-900 text-white"
+  >
+  
+  
+    <app-sidebar></app-sidebar>
+  </mat-sidenav>
 
+  <mat-sidenav-content>
+    <main class="pt-16 min-h-screen bg-gray-50">
+      <router-outlet></router-outlet>
+    </main>
+    <app-footer></app-footer>
+    
+  </mat-sidenav-content>
+</mat-sidenav-container>
